--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,22 @@
-[設定]
-cookie = 
+[帳號]
+user = 
+password = 
+usersessionid = 
+uid = 
+cid = 
+seid = 
+
 [Download]
 最大同時下載數 = 5
 下載路徑 = R:
-Download_sha1 = true
-[upload]
+download_sha1 = true
+
+[Upload]
 最大同時上傳數 = 5
 單文件上傳線程 = 4
-[aria2-rpc]
+
+[Aria2-rpc]
 rpc最大同時下載數 = 5
 rpc_url = http://localhost:6800/jsonrpc
 aria2_sha1 = false
+
